# worksp

./: .gitignore
2.py/: .gitignore
2.py/Projects/: obtEnvelope.py
2.py/Projects/Examples/Qt/: PyQt5_Example.py  Qt_calculator.py  Qtcore.Qthread.py
2.py/Projects/Examples/Socket/: tcpCliSocketServer.py  tcpSerSocket.py  tcpSerSocketServer.py  udpCliSocket.py  udpSerSocket.py
2.py/Projects/Examples/Threading/: Threading_example.py  downImgasd1-5.py  multipro_example.py
2.py/Projects/Examples/Twisted/: TwistedException.py  TwistedStop.py  reactorTraceback.py  tcpSerTwisted.py
2.py/Projects/Examples/Windows API/: pyhton实现Windows下模拟鼠标操作.py
2.py/Projects/Examples/asyncio/: Simple.py
2.py/Projects/Examples/optparse/: opttest.py
2.py/Projects/Examples/pyecharts/: pyecharts_Example.py
2.py/Projects/LeetCode/: 10正则表达式匹配(动态规划).py  11盛最多水的容器(双指针逼近).py  12整数转罗马数字(贪心算法).py  13罗马数字转整数(哈希表).py  14最长公共前缀(zip+set).py  15三数之和(三指针逼近).py  16最接近的三数之和.py  17电话号码的字母组合(map reduce).py  3无重复字符的最长子串.py  4寻找两个有序数组的中位数.py  5最长回文子串(KMP算法).py  8字符串转换整数 (atoi).py
2.py/Projects/OpenCV3/: OpenCV3实现简单的物体跟踪.py  canny.py  contours.py  cv_imscreenshot.py  cv_imshow.py  fourier.py  hist.py  hpf.py  siftFeatureTransform.py  strokeEdges.py
2.py/Projects/Plot/: 3DPlotDemo.py
2.py/Projects/Plot3D/: HistogramDemo.py  PathDemo.py  SimplePlot.py  StreamPlotDemo.py  XKCDPlot.py
2.py/Projects/TensorFlow/TensorflowProject/: practice_2.ipynb  predict.ipynb  train.ipynb
2.py/Projects/Utils/: 3DPlot.py  EnvelopeDetect.py  FilepathUtilis.py  PCtoLCD.py  PdUtilis.py  __init__.py  filecontrol.py
2.py/Projects/Utils/DSP/: CalEnvelope.py  Hilbert_Transform.py
2.py/Projects/Utils/FindAndReplace/: findandreplace.py  ui_findandreplace.py
2.py/Projects/Utils/SocketParse/: ClientSocket.py  ServerSocket.py
2.py/Projects/marker_caijian/: .gitignore  analysis.py  analysis.ui  bat  hist_dlg.ui  historyMark.py  historyMarkDlg.py  login.py  marker.py  marker.spec  pdw_trans.py  popwindow.py  sp.py  ui2py.bat  white.qss
2.py/Projects/可用项目/Asm_verify/: Asm_verify.py  T50HZY.ASM  repressdebug.py
2.py/Projects/可用项目/CameraFind/: CameraFind.py  init.xlsx  ping.py  ui_CameraFind.py  ui_CameraFindui.py
2.py/Projects/可用项目/PayrollRegister/: ExcelPro.py  PayrollRegister.py  PayrollRegisterUI.py  PayrollRegister_Main.py
2.py/Projects/可用项目/Pdw_Analysis/: INIT.csv  Pdw_Analysis.py  Pdw_AnalysisUI.py  Pdw_Analysis_Main.py
2.py/Projects/可用项目/Vhdl_text_verify/: Vhdltext_verify.py  Vhdltext_verify_Gui.py  dir_type_allfiles.py
2.py/Projects/可用项目/textio_generate/: textio_generate.py
3.cpp/C++/: .gitignore
3.cpp/C++/Projects/: .gitignore  Tools
3.cpp/C++/Projects/CppTest/: CppTest.cpp
3.cpp/C++/Projects/MatrixSearch/: MatrixSearch.cpp  MatrixSearch.h
3.cpp/C++/Projects/OpenMP/: omp_hello.cpp  ompfunc.cpp
3.cpp/C++/Projects/PdwToMpg/: PdwToMpg.cpp
3.cpp/C++/Projects/dpdk/: CMakeLists.txt  jz_dpdk_api.c  jz_dpdk_api.h  main.cpp
3.cpp/CUDA/: .gitignore
3.cpp/Tools/: CircularQueue.hpp  CpuSetAffinity.h  Error.h  Histogram.hpp  Macro.h  MemCheck.hpp  Singleton.hpp  Timeit.h  Timer.h  XptType.h  ZmqSocket.hpp  common.h
3.cpp/Tools/Example/: BMPImageExample.cpp  CJonExample.cpp  CircularQueueExample.cpp  CpuSetAffinityExample.cpp  ElectromagneticVisionExample.cpp  HistogramExample.cpp  HistogramMemCheckExample.cpp  MemCheckExample.cpp  PdwFileExample.cpp  PdwStructExample.cpp  PdwToBmpExample.cpp  PdwToMatExample.cpp  SingletonExample.cpp  TimeitExample.cpp  TimerExample.cpp  ZmqSocketExample.cpp  binaryFIleExample.cpp  csvExample.cpp  cvCoordinateMapExample.cpp  cvTextImageExample.cpp  iRadarSimProExample.cpp
3.cpp/Tools/JSON/: CJsonObject.cpp  cJSON.c
3.cpp/Tools/PdwStruct/: ElectromagneticVision.hpp  PdwPlot.hpp  PdwStruct.hpp  PdwToBmp.hpp  PdwToMat.hpp
3.cpp/Tools/fileStream/: PdwFile.hpp  binaryFileStream.hpp  csvFileStream.hpp
3.cpp/Tools/iRadarSimPro/: CircularList.hpp  RadarStruct.h  iRadarSimPro.h
3.cpp/Tools/imageTools/: BMPImage.h  CvTools.hpp  cvCoordinateMap.h  cvCoordinateMap.hpp  cvTextImage.hpp  saveToPicture.cpp
3.cpp/Tools/websocket/: websocket.h
4.sh/: clr_rpmcache.sh  code_copy.sh  get_rpmcache.sh  get_rpmcache.sh~
(+313 files in other folders)
